--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   color: var(--mainBlack);
   background: var(--mainWhite);
   font-family: "Lato", sans-serif;
+  margin: 0;
 }
 /* --------------- Navbar ---------------- */
 .navbar {
@@ -70,7 +71,7 @@ body {
   text-align: center;
   background: rgba(255, 255, 255, 0.8);
   display: inline-block;
-  padding: 2rem;
+  padding: 2rem 0;
 }
 .banner-title {
   font-size: 3.4rem;
@@ -191,7 +192,7 @@ body {
   background: rgb(231, 226, 221);
   padding: 1.5rem;
   transition: var(--mainTransition);
-  transform: translateX(100%);
+  /* transform: translateX(100%); */
 }
 .showCart {
   transform: translateX(0);
@@ -263,3 +264,115 @@ body {
 }
 
 /* --------------- End of Cart ---------------- */
+/* accordion */
+.accord {
+  background-color: var(--primaryColor);
+  font-size: 18px;
+  padding: 1rem 0;
+}
+
+.accordion {
+  width: 90%;
+  max-width: 70%;
+  margin: 1rem auto;
+  /* margin: 1rem 0; */
+}
+.accordion h1 {
+  text-align: center;
+  color: white;
+}
+.accord-item {
+  background-color: white;
+  padding: 1rem 3rem 1rem 1rem;
+  border-radius: 5px;
+  margin: 1rem auto;
+}
+.acckrd-header {
+  padding: 1rem;
+  position: relative;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 1.5rem;
+}
+.acckrd-header::after {
+  position: absolute;
+  content: "\002B";
+  line-height: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  font-size: 2rem;
+}
+.accord-body {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-in-out;
+  transform: translate(1);
+  /* display: none; */
+}
+.content {
+  padding: 1rem;
+  border-top: 3px solid;
+  border-image: linear-gradient(to right, blue, red) 1;
+}
+.acckrd-header.active::after {
+  content: "\2212";
+}
+/* footer */
+.ggg p {
+  max-width: 200px;
+}
+.foote {
+  /* position: relative; */
+  display: grid;
+  /* grid-template-areas: "ggg"; */
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  margin: 0 auto;
+  max-width: 90%;
+  padding: 2rem 1rem 1rem 1rem;
+}
+.ggg ul {
+  list-style: none;
+  margin: 0;
+}
+
+.ggg h1 {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  padding: 1rem 0;
+}
+
+.ggg .fa {
+  font-size: 12px;
+  padding-right: 0.5rem;
+}
+.fm #inpt {
+  width: 200px;
+  height: 2rem;
+}
+.fm #inptt {
+  height: 2rem;
+  width: 4rem;
+  background-color: var(--primaryColor);
+  color: white;
+  border: none;
+}
+
+@media (max-width: 767px) {
+  .accord-item {
+    padding: 1rem;
+  }
+  .accordion {
+    max-width: 100%;
+  }
+  .foote {
+    display: block;
+  }
+  .ggg {
+    padding: 1rem 0;
+  }
+  h1 {
+    font-size: 16px;
+  }
+}
